# tfmlens

./: .gitignore  .pre-commit-config.yaml  DESIGN.md  README.md  pyproject.toml
.claude/skills/write-test/: SKILL.md
.github/workflows/: ci.yml
configs/: limix_2m.yaml
docs/: old-code-exp4-walkthrough.md  reference-pipeline.md
docs/paper/: balef2026onelayer.md  experiments.md
docs/paper/concepts/: layer-ablation.md  looped-transformer-tfm.md  self-repair.md  tabular-logit-lens.md
src/tfm_lens/: __init__.py  utils.py
src/tfm_lens/adapters/: __init__.py  base.py  limix.py
src/tfm_lens/core/: __init__.py  capture.py  interventions.py  logit_lens.py
src/tfm_lens/data/: __init__.py  prior.py
src/tfm_lens/evaluation/: __init__.py  datasets.py  layerwise.py  preprocess.py  self_repair.py
src/tfm_lens/finetune/: __init__.py  __main__.py  config.py  finetune_decoders.py
tests/: conftest.py  test_adapter_base.py  test_capture.py  test_cli.py  test_config.py  test_evaluation_real.py  test_finetune_decoders.py  test_interventions.py  test_layerwise.py  test_limix_adapter.py  test_logit_lens.py  test_prior.py  test_self_repair.py  test_smoke.py  toys.py
