[project]
name = "tfm-lens"
version = "0.1.0"
description = "Tabular logit-lens toolkit: reproducing Exp4/5/6 of 'Is One Layer Enough?' (classification only)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Han Xiao", email = "xiaohan2012@gmail.com" }]
dependencies = [
    "torch>=2.4",
    "numpy",
    "einops",
    # TabICL prior (vendored) — synthetic training-table generation
    "scipy",
    "scikit-learn",
    "xgboost",
    "joblib",
    "tqdm",
    # finetune config
    "pydantic>=2",
    "pyyaml",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tfm_lens"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pre-commit>=3.7",
    "ruff>=0.6",
    "huggingface-hub",  # fetch the LimiX-2M ckpt for the integration test
]
# Exp5/6 evaluation on real tables: LimiX's vendored preprocessing needs
# kditransform; OpenML task loading (added in the eval data module) needs openml.
# Kept out of core so training / CI stay light — install with `uv sync --group eval`.
eval = [
    "kditransform",
    "numba>=0.60",  # kditransform pulls numba; pin forward so it doesn't
                    # backtrack to a pre-3.12 llvmlite that fails to build
    "pandas",  # vendored data_utils / OpenML tables
]

# Pull torch from the CPU-only wheel index so CI (and local) stays light and
# cross-platform. `explicit = true` means only packages routed here via
# tool.uv.sources use this index; everything else resolves from PyPI.
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
# Vendored upstream code (Apache-2.0) is kept byte-for-byte; don't lint/format it.
extend-exclude = ["src/tfm_lens/vendor"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
